src/css/Home.css
#lassonde {
    width: 500px;
}

#intro {
    width: 500px;
}

.list-1 {
    width: 500px;
    list-style-type: none;
}

#title {
    font-size: 80px;
}

.header2 {
    text-decoration: underline;
}

.header3 {
    padding-top: 10px;
    font-size: 18px;
}

.list-2 {
    list-style-type: none;

}

.list-2 li {
    display: inline-block;
    margin-left: 1vw;
    margin-right: 1vw;
}


a {
    text-decoration: none;
    font-size: 20px;
    color: #130d17;
}

a:hover {
    color: #794f94;
}

.skill-box {
    width: 300px;
    height: 250px;
    border: 1px solid black;
    margin: 20px;
    padding: 5px;
}

.skill-header {
    font-size: 30px;
}

.skill-paragraph {
    font-size: 20px;
}

#about-exp {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
}

#box-container {
    display: flex;
    flex-direction: row;
}

.horizontal-list li {
    float: left;
}

.horizontal-list li {
    display: block;
    padding: 16px;
    text-align: center;
    text-decoration: none;
}

.med-header {
    font-size: 26px;
    margin-bottom: 0;
    padding-bottom: 0;
}

#language-list {
    margin-top: 0px;
    padding-left: 0px;
    margin-left: none !important;
}

#framework-list {
    margin-top: 0px;
    padding-left: 0px;
}

#down-button {
    -webkit-animation: breathing 1s ease-out infinite normal;
    animation: breathing 1s ease-out infinite normal;
    background: none;
    border: none;
    cursor: pointer;
    margin-top: -10em;
}

#down-button img {
    height: 5em;
}


#down-button-normal img {
    height: 5em;
}

#down-button-dark-normal img {
    height: 5em;
    filter: invert(99%) sepia(4%) saturate(87%) hue-rotate(178deg) brightness(116%) contrast(100%);

}

#down-button-dark {
    -webkit-animation: breathing 1s ease-out infinite normal;
    animation: breathing 1s ease-out infinite normal;
    background: none;
    border: none;
    cursor: pointer;
    margin-top: -10em;
}

#down-button-normal {
    background: none;
    border: none;
    cursor: pointer;
}

#down-button-dark-normal {
    background: none;
    border: none;
    cursor: pointer;
    margin-top: -10em;
}


#down-button-dark img {
    height: 5em;
    filter: invert(99%) sepia(4%) saturate(87%) hue-rotate(178deg) brightness(116%) contrast(100%);

}

.lightHome {
    background: linear-gradient(225deg, #49a09d, #5f2c82);

}

.darkHome {
    background: linear-gradient(225deg, #082449, #2c1739);

}

.darkHome * {
    color: white;
}

#arrowHeader {
    margin-bottom: 2em;
}


@-webkit-keyframes breathing {
    0% {
        -webkit-transform: scale(0.9);
        transform: scale(0.9);
    }

    25% {
        -webkit-transform: scale(1);
        transform: scale(1);
    }

    60% {
        -webkit-transform: scale(0.9);
        transform: scale(0.9);
    }

    100% {
        -webkit-transform: scale(0.9);
        transform: scale(0.9);
    }
}

@keyframes breathing {
    0% {
        -webkit-transform: scale(0.9);
        -ms-transform: scale(0.9);
        transform: scale(0.9);
    }

    25% {
        -webkit-transform: scale(1);
        -ms-transform: scale(1);
        transform: scale(1);
    }

    60% {
        -webkit-transform: scale(0.9);
        -ms-transform: scale(0.9);
        transform: scale(0.9);
    }

    100% {
        -webkit-transform: scale(0.9);
        -ms-transform: scale(0.9);
        transform: scale(0.9);
    }
}


#button-container {
    -webkit-animation: breathing 3s ease-out infinite normal;
    animation: breathing 3s ease-out infinite normal;
}

#dl-button {
    position: absolute;
    top: 10px;
    right: 10px;
    cursor: pointer;
    background: none;
    border: none;
    -webkit-animation: breathing 1.5s ease-out infinite normal;
    animation: breathing 1.5s ease-out infinite normal;
}

#darkLightLogo {
    position: absolute;
    top: 40px;
    right: 40px;
    width: 200px;
}

#resume-button {
    position: absolute;
    top: 10px;
    left: 10px;
    cursor: pointer;
    background: none;
    border: none;
    -webkit-animation: breathing 1.5s ease-out infinite normal;
    animation: breathing 1.5s ease-out infinite normal;
}

#resume-img {
    width: 80px;
    height: 80px;
}

#dl-img {
    background: none;
    height: 3em;
    width: 3em;

}

@media only screen and (max-width:1000px) {
    #portrait {
        width: 9em;
        height: 9em;
        display: flex;
        padding: 5px;
    }

    #intro {
        width: 100vw;
        padding: 5px;
        flex-direction: column;
        display: flex;
        order: 2;
    }

    #title {
        font-size: 50px;
        margin-bottom: 0px;
        padding-bottom: 0px;
    }

    .about {
        font-size: 16px;
        margin-top: 0px;
        padding-top: 0px;
    }

    #home-page {
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
        width: 100vw;
        height: 70vh;
    }

    #portrait-box {
        order: 1;
    }

    .App {
        width: 100vw;
    }

    #box-container {
        flex-direction: column;
    }

    .home-div {
        display: flex;
        justify-content: space-around;
        height: 60vh;
    }

    .home-page {
        height: initial;
        height: 50vh;
        width: 100vw;
        align-items: center;
    }

    #about-div {
        margin-top: 100vh;
        flex-direction: column;
    }

    #about-page {
        height: 200vh;
    }

    #lassonde {
        width: 13em;
        height: 10em;
        object-fit: cover;
    }

    #button-container {
        margin-top: 30em;

    }

    .horizontal-list li {
        float: left;
    }

    .horizontal-list li {
        display: block;
        padding: 14px;
        text-align: center;
        text-decoration: none;
        text-align: center;
    }

    .med-header {
        font-size: 26px;
        margin-bottom: 0;
        padding-bottom: 0;
    }

    #language-list {
        margin-top: 0px;
        padding-left: 0px;
        margin-left: none !important;
        display: flex;
        flex-direction: row;
        justify-content: center;
        flex-wrap: wrap;
    }

    #framework-list {
        margin-top: 0px;
        padding-left: 0px;
        display: flex;
        flex-direction: row;
        justify-content: center;
        flex-wrap: wrap;
    }

    #down-button {
        margin-top: 5em;
    }

    #down-button-dark {
        -webkit-animation: breathing 1s ease-out infinite normal;
        animation: breathing 1s ease-out infinite normal;
        background: none;
        border: none;
        cursor: pointer;
        color: white;
        margin-top: 5em;
    }

    #down-button-dark-normal {
        background: none;
        border: none;
        cursor: pointer;
        color: white;
        margin-top: 5em;
    }
}

